--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "native-base": "^2.7.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
-    "react-native-form-validator": "^0.2.0"
+    "react-native-form-validator": "^0.2.0",
+    "watchman": "^1.0.0"
   }
 }
