--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "private": true,
   "dependencies": {
     "expo": "^28.0.0",
+    "firebase": "^5.2.0",
     "native-base": "^2.7.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-drawer": "^2.5.0",
+    "react-native-firebase": "^4.3.6",
     "react-native-form-validator": "^0.2.0",
+    "react-native-google-places-autocomplete": "^1.3.6",
+    "react-native-modal": "^6.4.0",
+    "react-native-router-flux": "^4.0.0-beta.31",
     "watchman": "^1.0.0"
   }
 }
